Fixed gaps between products

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -209,8 +209,6 @@ button {
   grid-template-rows: auto;
   justify-self: center;
   align-self: center;
-  margin:auto; /* added this to reduce the size of the image*/
-  gap: 4em; /* added this to reduce the size of the image*/
 }
 
 .product-categories img {
